--- a/store/store/Templates/base.html
+++ b/store/store/Templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Apple Store{% endblock %}</title>
-    <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'css/favicon.ico' %}" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
@@ -47,7 +47,7 @@
                             <div class="col-md-6 mb-3">
                                 <h5 class="fw-bold">Contactez-nous</h5>
                                 <ul class="list-unstyled">
-                                    <li><i class="bi bi-envelope"></i> Email: info@apple-store.com</li>
+                                    <li><i class="bi bi-envelope"></i> Email: lucduplex@outlook.com</li>
                                     <li><i class="bi bi-telephone"></i> Téléphone: 514-946-7048</li>
                                     <li><i class="bi bi-geo-alt"></i> Adresse: 123, Apple Street, Montréal</li>
                                 </ul>
